# python-ident-rename

./: LICENCE  README.md  default.nix  python-ident-rename.cabal  python-ident-rename.nix
src-exe/: Main.hs
src/Language/Python/Syntax/: RenameOptions.hs  Renamer.hs
