name:               python-ident-rename
version:            0.0.1
license:            BSD3
license-file:       LICENCE
author:             Tony Morris
maintainer:         Tony Morris
copyright:          Copyright (c) 2019, Tony Morris
synopsis:           Python identifer rename
category:           Language
description:        Executable to rename python identifiers
homepage:           https://github.com/tonymorris/python-ident-rename
bug-reports:        https://github.com/tonymorris/python-ident-rename/issues
cabal-version:      >= 1.10
build-type:         Simple
extra-source-files: changelog.md

source-repository   head
  type:             git
  location:         git@github.com:tonymorris/python-ident-rename.git

library
  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5
                    , lens >= 4 && < 5
                    , hpython >= 0.2 && < 2
                    , text >= 1.2 && < 1.3
                    , filepath >= 1.2 && < 2
                    , optparse-applicative >= 0.14 && < 2
                    , semigroupoids >= 5.2 && < 6

  ghc-options:
                    -Wall

  default-extensions:
  
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Language.Python.Syntax.RenameOptions
                    Language.Python.Syntax.Renamer

executable          python-ident-rename
  main-is:
                    Main.hs

  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5
                    , python-ident-rename

  ghc-options:
                    -Wall

  default-extensions:
                    NoImplicitPrelude

  hs-source-dirs:
                    src-exe

test-suite          tests

  build-depends:      QuickCheck >= 2.9.2 && <2.13
                    , base >= 4.8 && < 5
                    , checkers >= 0.4.6 && <0.5
                    , python-ident-rename
                    , lens >= 4 && <4.18
                    , tasty >= 0.11 && <1.2
                    , tasty-hunit >= 0.9 && <0.11
                    , tasty-quickcheck >= 0.8.4 && <0.11

  type:             
                    exitcode-stdio-1.0

  main-is:          
                    Tests.hs

  hs-source-dirs:   
                    test

  default-language: 
                    Haskell2010

  ghc-options:       
                    -Wall
